Oopsie whoopsie typo fix

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           0
         </div>
       </div>
-      Chose your weapon
+      Choose your weapon
       <div class="choices"></div>
       <div class="manipulate-dices">
         Add a dice of your choice:<br />
